--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 @import "bourbon";
 @import "neat";
 
@@ -8,10 +10,16 @@ body {
 	padding: 20px;
 }
 
+.mydiv {
+	display: flex;
+}
+
 h1 {
 	//@include linear-gradient(to top, red, orange);
 	text-align: center;
 	color: #555;
+	border-radius: 12px;
+	border: 5px solid yellow;
 }
 
 div {
