--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,10 +1,14 @@
 @charset "utf-8";
 
+@import "normalize";
 @import "bourbon";
 @import "neat";
 @import "../../node_modules/material-colors/dist/colors.scss";
 
-$foo: #eee;
+// required if using svg icon spritesheets
+.hide {
+	display: none;
+}
 
 body {
 	background-color: $md-grey-100;
@@ -19,8 +23,7 @@ h1 {
 	//@include linear-gradient(to top, red, orange);
 	text-align: center;
 	color: #555;
-	border-radius: 12px;
-	border: 5px solid red;
+	border-bottom: 5px solid purple;
 }
 
 div {
