--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -12,38 +12,31 @@
 
 body {
 	background-color: $md-grey-100;
+	line-height: 2em;
+	font-size: 14px;
+	text-align: left;
 }
 
 main {
 	padding: {
-		left: 20px;
-		right: 20px;
+		left: 5%;
+		right: 5%;
 	}
 }
 
-.mydiv {
-	display: flex;
-}
-
 header {
-	height: 140px;
+	height: 9rem;
 	width: 100%;
 	@include linear-gradient(to top, $md-orange-200, $md-blue-300);
 	h1 {
 		margin: 0;
-		padding-top: 30px;
+		padding-top: 2rem;
 	}
 	h1, p {
 		color: #fff;
 		text-align: center;
 		font-weight: bold;
 	}
-}
-
-div {
-	line-height: 2em;
-	text-align: left;
-	padding: 1em;
 }
 
 .wrapper {
