--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,41 +1,3 @@
-@charset 'UTF-8';
-
-// 1. Configuration and helpers
-@import
-  'utils/variables',
-  'utils/functions',
-  'utils/mixins';
-
-// 2. Vendors
-@import
-  //'vendor/normalize', // local version
-  'normalize', // npm version
-  'bourbon', // mixins
-  'neat', // grid
-  '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap.scss',
-  '../../node_modules/material-colors/dist/colors.scss'; // google material colors
-  
-
-// 3. Base stuff
-@import
-  'base/base',
-  'base/fonts',
-  'base/typography',
-  'base/helpers';
-
-// 4. Layout-related sections
-@import
-  'layout/header',
-  'layout/footer';
-
-// 5. Components
-@import
-  'components/buttons';
-
-// 6. Page-specific styles
-@import
-  'pages/home';
-
-// 7. Themes
-@import
-  'themes/default';
+h1 {
+  color: red;
+}
